2010-04-24 Bruno Renié <bruno@renie.fr> -- 0.2.3

    * Released 0.2.3

2010-04-08 Bruno Renié <bruno@renie.fr>

    * Changed map_info to be false by default
    * Switched to the hosted version of the JS API
    * Added the PanZoomBar control to all maps in the admin widget
    * Updated the docs and screenshots accordingly

2010-03-03 Bruno Renié <bruno@renie.fr> -- 0.2.2

    * Added some tests for the template rendering
    * Javascript code for maps is completely isolated
    * Added a 'as var_name' to the template tag for further manipulation
    * Added tests (and a bare models.py to prevent the tests to fail)
    * Small fixes in the docs

2010-03-02 Bruno Renié <bruno@renie.fr> -- 0.2.1

    * Fix in the javascript: allowing more than 2 maps per page
    * More robust argument parsing, allowing template variables
    * Added version number at the root of the package
    * Docs -- online at http://packages.python.org/django-geoportail/


2010-03-02 Bruno Renié <bruno@renie.fr> -- 0.2.0

    * Added a template tag for rendering geo* fields
    * No more request to api.ign.fr, going straight to the token server


2010-01-08 Bruno Renié <bruno@renie.fr> -- 0.1.0

    * First release, admin support only
